RESOLVED FIXED177010
Web Inspector: keyboard shortcut for "Reload page from origin" doesn't match Safari, and doesn't work
https://bugs.webkit.org/show_bug.cgi?id=177010
Summary Web Inspector: keyboard shortcut for "Reload page from origin" doesn't match ...
Blaze Burg
Reported 2017-09-15 10:05:18 PDT
:(
Attachments
Proposed Fix (13.82 KB, patch)
2017-09-15 10:15 PDT, Blaze Burg
no flags
Archive of layout-test-results from ews100 for mac-elcapitan (1.34 MB, application/zip)
2017-09-15 11:12 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (2.69 MB, application/zip)
2017-09-15 11:12 PDT, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-elcapitan (1.35 MB, application/zip)
2017-09-15 11:24 PDT, Build Bot
no flags
Proposed Fix (13.82 KB, patch)
2017-09-15 12:58 PDT, Blaze Burg
joepeck: review+
Blaze Burg
Comment 1 2017-09-15 10:05:35 PDT
Blaze Burg
Comment 2 2017-09-15 10:15:41 PDT
Created attachment 320923 [details] Proposed Fix
Build Bot
Comment 3 2017-09-15 11:12:05 PDT
Comment on attachment 320923 [details] Proposed Fix Attachment 320923 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/4560061 Number of test failures exceeded the failure limit.
Build Bot
Comment 4 2017-09-15 11:12:06 PDT
Created attachment 320930 [details] Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2017-09-15 11:12:22 PDT
Comment on attachment 320923 [details] Proposed Fix Attachment 320923 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4560027 Number of test failures exceeded the failure limit.
Build Bot
Comment 6 2017-09-15 11:12:23 PDT
Created attachment 320931 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7 2017-09-15 11:24:17 PDT
Comment on attachment 320923 [details] Proposed Fix Attachment 320923 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4560077 Number of test failures exceeded the failure limit.
Build Bot
Comment 8 2017-09-15 11:24:19 PDT
Created attachment 320934 [details] Archive of layout-test-results from ews113 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Blaze Burg
Comment 9 2017-09-15 12:58:51 PDT
Created attachment 320951 [details] Proposed Fix
Joseph Pecoraro
Comment 10 2017-09-15 14:28:39 PDT
Comment on attachment 320951 [details] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=320951&action=review r=me, I'll leave it up to you what names you decide to use. > Source/JavaScriptCore/ChangeLog:9 > + Use "reload from origin" nomenclature instead of "reload ignoring cache". I don't think we need to do this. Reload ignoring cache is clearer to me than Reload from origin. Reload from origin is confusing. What if a page loads resources from many different origins? How many developers know what origin means? How many after reading "from origin" will think (like me) "wow this must be something special I wonder what it does". If this really does only ignore the cache for a single origin (the main resource's origin) then I might be fine with changing the naming. > Source/WebInspectorUI/UserInterface/Base/Main.js:1837 > + // Reload page from origin if the button is clicked while the shift key is pressed down. > + PageAgent.reload.invoke({ignoreCache: this.modifierKeys.shiftKey}); So this is a good fix, since this was broken before. The Network Tab's "Ignore Cache" button appears to be broken, and I don't think this patch addresses that. That was what I was thinking of before, so we should file a different bug on that.
Blaze Burg
Comment 11 2017-09-21 11:34:42 PDT
(In reply to Joseph Pecoraro from comment #10) > Comment on attachment 320951 [details] > Proposed Fix > > View in context: > https://bugs.webkit.org/attachment.cgi?id=320951&action=review > > r=me, I'll leave it up to you what names you decide to use. > > > Source/JavaScriptCore/ChangeLog:9 > > + Use "reload from origin" nomenclature instead of "reload ignoring cache". > > I don't think we need to do this. Reload ignoring cache is clearer to me > than Reload from origin. Let's keep it "reload from origin" in the implementation since that matches what the loading code calls it. I agree the UI should say "Reload Ignoring Cache". But then it won't match the menu item in Safari. I argued for "Reload Ignoring Cache" there and it was not chosen. > Reload from origin is confusing. What if a page loads resources from many > different origins? How many developers know what origin means? How many > after reading "from origin" will think (like me) "wow this must be > something special I wonder what it does". > > If this really does only ignore the cache for a single origin (the main > resource's origin) then I might be fine with changing the naming. > > > Source/WebInspectorUI/UserInterface/Base/Main.js:1837 > > + // Reload page from origin if the button is clicked while the shift key is pressed down. > > + PageAgent.reload.invoke({ignoreCache: this.modifierKeys.shiftKey}); > > So this is a good fix, since this was broken before. > > The Network Tab's "Ignore Cache" button appears to be broken, and I don't > think this patch addresses that. That was what I was thinking of before, so > we should file a different bug on that.
Blaze Burg
Comment 12 2017-09-21 12:04:34 PDT
Note You need to log in before you can comment on or make changes to this bug.