Web Inspector: keyboard shortcut for "Reload page from origin" doesn't match Safari, and doesn't work https://bugs.webkit.org/show_bug.cgi?id=177010 <rdar://problem/33134548>

Reviewed by Joseph Pecoraro.

Source/JavaScriptCore:

Use "reload from origin" nomenclature instead of "reload ignoring cache".

* inspector/protocol/Page.json: Improve the comment, but don't change the
parameter name since this would be a divergence from legacy protocols.

Source/WebCore:

Use "reload from origin" nomenclature instead of "reload ignoring cache".

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::reload):
* inspector/InspectorPageAgent.h:

Source/WebInspectorUI:

I seem to have broken reload from origin via Web Inspector in a previous
patch, because the parameter is 'ignoreCache' instead of 'shouldIgnoreCache'.

* Localizations/en.lproj/localizedStrings.js:
Modernize tooltip text.

* UserInterface/Base/Main.js:
(WI.contentLoaded):
Disambiguate two locals with the same name. Modernize the tooltip.
Make the shortcut Cmd-Opt-R to match Safari. Fix wrong parameter usage.

* UserInterface/Test/FrontendTestHarness.js:
(FrontendTestHarness.prototype.reloadPage):
Fix wrong parameter.

Canonical link: https://commits.webkit.org/193645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222338 268f45cc-cd09-0410-ab3c-d52691b4dbfc